--- a/src/scss/icons/style.scss
+++ b/src/scss/icons/style.scss
@@ -29,357 +29,357 @@
 
 .ds-icon-arrow-left {
   &:before {
-    content: $ds-icon-arrow-left; 
+    content: $ds-icon-arrow-left;
   }
 }
 .ds-icon-arrow-right {
   &:before {
-    content: $ds-icon-arrow-right; 
+    content: $ds-icon-arrow-right;
   }
 }
 .ds-icon-arrow-prev {
   &:before {
-    content: $ds-icon-arrow-prev; 
+    content: $ds-icon-arrow-prev;
   }
 }
 .ds-icon-arrow-next {
   &:before {
-    content: $ds-icon-arrow-next; 
+    content: $ds-icon-arrow-next;
   }
 }
 .ds-icon-checked {
   &:before {
-    content: $ds-icon-checked; 
+    content: $ds-icon-checked;
   }
 }
 .ds-icon-exit {
   &:before {
-    content: $ds-icon-exit; 
+    content: $ds-icon-exit;
   }
 }
 .ds-icon-car {
   &:before {
-    content: $ds-icon-car; 
+    content: $ds-icon-car;
   }
 }
 .ds-icon-moto {
   &:before {
-    content: $ds-icon-moto; 
+    content: $ds-icon-moto;
   }
 }
 .ds-icon-cart {
   &:before {
-    content: $ds-icon-cart; 
+    content: $ds-icon-cart;
   }
 }
 .ds-icon-delivery {
   &:before {
-    content: $ds-icon-delivery; 
+    content: $ds-icon-delivery;
   }
 }
 .ds-icon-compare {
   &:before {
-    content: $ds-icon-compare; 
+    content: $ds-icon-compare;
   }
 }
 .ds-icon-credit {
   &:before {
-    content: $ds-icon-credit; 
+    content: $ds-icon-credit;
   }
 }
 .ds-icon-shield {
   &:before {
-    content: $ds-icon-shield; 
+    content: $ds-icon-shield;
   }
 }
 .ds-icon-services {
   &:before {
-    content: $ds-icon-services; 
+    content: $ds-icon-services;
   }
 }
 .ds-icon-plane {
   &:before {
-    content: $ds-icon-plane; 
+    content: $ds-icon-plane;
   }
 }
 .ds-icon-placemark {
   &:before {
-    content: $ds-icon-placemark; 
+    content: $ds-icon-placemark;
   }
 }
 .ds-icon-tile {
   &:before {
-    content: $ds-icon-tile; 
+    content: $ds-icon-tile;
   }
 }
 .ds-icon-user {
   &:before {
-    content: $ds-icon-user; 
+    content: $ds-icon-user;
   }
 }
 .ds-icon-eye {
   &:before {
-    content: $ds-icon-eye; 
+    content: $ds-icon-eye;
   }
 }
 .ds-icon-oil {
   &:before {
-    content: $ds-icon-oil; 
+    content: $ds-icon-oil;
   }
 }
 .ds-icon-tires {
   &:before {
-    content: $ds-icon-tires; 
+    content: $ds-icon-tires;
   }
 }
 .ds-icon-wheels {
   &:before {
-    content: $ds-icon-wheels; 
+    content: $ds-icon-wheels;
   }
 }
 .ds-icon-repair {
   &:before {
-    content: $ds-icon-repair; 
+    content: $ds-icon-repair;
   }
 }
 .ds-icon-battery {
   &:before {
-    content: $ds-icon-battery; 
+    content: $ds-icon-battery;
   }
 }
 .ds-icon-card {
   &:before {
-    content: $ds-icon-card; 
+    content: $ds-icon-card;
   }
 }
 .ds-icon-gift {
   &:before {
-    content: $ds-icon-gift; 
+    content: $ds-icon-gift;
   }
 }
 .ds-icon-list {
   &:before {
-    content: $ds-icon-list; 
+    content: $ds-icon-list;
   }
 }
 .ds-icon-menu {
   &:before {
-    content: $ds-icon-menu; 
+    content: $ds-icon-menu;
   }
 }
 .ds-icon-filter {
   &:before {
-    content: $ds-icon-filter; 
+    content: $ds-icon-filter;
   }
 }
 .ds-icon-attention {
   &:before {
-    content: $ds-icon-attention; 
+    content: $ds-icon-attention;
   }
 }
 .ds-icon-case {
   &:before {
-    content: $ds-icon-case; 
+    content: $ds-icon-case;
   }
 }
 .ds-icon-email {
   &:before {
-    content: $ds-icon-email; 
+    content: $ds-icon-email;
   }
 }
 .ds-icon-emoji {
   &:before {
-    content: $ds-icon-emoji; 
+    content: $ds-icon-emoji;
   }
 }
 .ds-icon-favourite {
   &:before {
-    content: $ds-icon-favourite; 
+    content: $ds-icon-favourite;
   }
 }
 .ds-icon-scales {
   &:before {
-    content: $ds-icon-scales; 
+    content: $ds-icon-scales;
   }
 }
 .ds-icon-settings {
   &:before {
-    content: $ds-icon-settings; 
+    content: $ds-icon-settings;
   }
 }
 .ds-icon-target {
   &:before {
-    content: $ds-icon-target; 
+    content: $ds-icon-target;
   }
 }
 .ds-icon-time {
   &:before {
-    content: $ds-icon-time; 
+    content: $ds-icon-time;
   }
 }
 .ds-icon-trash {
   &:before {
-    content: $ds-icon-trash; 
+    content: $ds-icon-trash;
   }
 }
 .ds-icon-phone-nobg {
   &:before {
-    content: $ds-icon-phone-nobg; 
+    content: $ds-icon-phone-nobg;
   }
 }
 .ds-icon-phone {
   &:before {
-    content: $ds-icon-phone; 
+    content: $ds-icon-phone;
   }
 }
 .ds-icon-instagram {
   &:before {
-    content: $ds-icon-instagram; 
+    content: $ds-icon-instagram;
   }
 }
 .ds-icon-facebook {
   &:before {
-    content: $ds-icon-facebook; 
+    content: $ds-icon-facebook;
   }
 }
 .ds-icon-youtube {
   &:before {
-    content: $ds-icon-youtube; 
+    content: $ds-icon-youtube;
   }
 }
 .ds-icon-vk {
   &:before {
-    content: $ds-icon-vk; 
+    content: $ds-icon-vk;
   }
 }
 .ds-icon-wapp-filled {
   &:before {
-    content: $ds-icon-wapp-filled; 
+    content: $ds-icon-wapp-filled;
   }
 }
 .ds-icon-wapp {
   &:before {
-    content: $ds-icon-wapp; 
+    content: $ds-icon-wapp;
   }
 }
 .ds-icon-tg-filled {
   &:before {
-    content: $ds-icon-tg-filled; 
+    content: $ds-icon-tg-filled;
   }
 }
 .ds-icon-tg {
   &:before {
-    content: $ds-icon-tg; 
+    content: $ds-icon-tg;
   }
 }
 .ds-icon-logo .path1 {
   &:before {
-    content: $ds-icon-logo-path1;  
-    color: rgb(68, 68, 68);
+    content: $ds-icon-logo-path1;
+    color: #444;
   }
 }
 .ds-icon-logo .path2 {
   &:before {
-    content: $ds-icon-logo-path2;  
-    margin-left: -1em;  
-    color: rgb(68, 68, 68);
+    content: $ds-icon-logo-path2;
+    margin-left: -1em;
+    color: #444;
   }
 }
 .ds-icon-logo .path3 {
   &:before {
-    content: $ds-icon-logo-path3;  
-    margin-left: -1em;  
-    color: rgb(68, 68, 68);
+    content: $ds-icon-logo-path3;
+    margin-left: -1em;
+    color: #444;
   }
 }
 .ds-icon-logo .path4 {
   &:before {
-    content: $ds-icon-logo-path4;  
-    margin-left: -1em;  
-    color: rgb(68, 68, 68);
+    content: $ds-icon-logo-path4;
+    margin-left: -1em;
+    color: #444;
   }
 }
 .ds-icon-logo .path5 {
   &:before {
-    content: $ds-icon-logo-path5;  
-    margin-left: -1em;  
-    color: rgb(68, 68, 68);
+    content: $ds-icon-logo-path5;
+    margin-left: -1em;
+    color: #444;
   }
 }
 .ds-icon-logo .path6 {
   &:before {
-    content: $ds-icon-logo-path6;  
-    margin-left: -1em;  
-    color: rgb(187, 187, 187);
+    content: $ds-icon-logo-path6;
+    margin-left: -1em;
+    color: #bbb;
   }
 }
 .ds-icon-summer {
   &:before {
-    content: $ds-icon-summer;     
-    color: #f3ca2c;
+    content: $ds-icon-summer;
+    color: $color__warning;
   }
 }
 .ds-icon-winter {
   &:before {
-    content: $ds-icon-winter;     
-    color: #008bd1;
+    content: $ds-icon-winter;
+    color: $color__brand;
   }
 }
 .ds-icon-allseason .path1 {
   &:before {
-    content: $ds-icon-allseason-path1;  
-    color: rgb(0, 139, 209);
+    content: $ds-icon-allseason-path1;
+    color: $color__brand;
   }
 }
 .ds-icon-allseason .path2 {
   &:before {
-    content: $ds-icon-allseason-path2;  
-    margin-left: -1em;  
-    color: rgb(243, 202, 44);
+    content: $ds-icon-allseason-path2;
+    margin-left: -1em;
+    color: $color__warning;
   }
 }
 .ds-icon-spikes {
   &:before {
-    content: $ds-icon-spikes;     
-    color: #008bd1;
+    content: $ds-icon-spikes;
+    color: $color__brand;
   }
 }
 .ds-icon-nonspikes {
   &:before {
-    content: $ds-icon-nonspikes;     
-    color: #008bd1;
+    content: $ds-icon-nonspikes;
+    color: $color__brand;
   }
 }
 .ds-icon-steel .path1 {
   &:before {
-    content: $ds-icon-steel-path1;  
-    color: rgb(0, 139, 209);
+    content: $ds-icon-steel-path1;
+    color: $color__brand;
   }
 }
 .ds-icon-steel .path2 {
   &:before {
-    content: $ds-icon-steel-path2;  
-    margin-left: -1em;  
-    color: rgb(243, 202, 44);
+    content: $ds-icon-steel-path2;
+    margin-left: -1em;
+    color: $color__warning;
   }
 }
 .ds-icon-founding .path1 {
   &:before {
-    content: $ds-icon-founding-path1;  
-    color: rgb(0, 139, 209);
+    content: $ds-icon-founding-path1;
+    color: $color__brand;
   }
 }
 .ds-icon-founding .path2 {
   &:before {
-    content: $ds-icon-founding-path2;  
-    margin-left: -1em;  
-    color: rgb(243, 202, 44);
+    content: $ds-icon-founding-path2;
+    margin-left: -1em;
+    color: $color__warning;
   }
 }
 .ds-icon-iron {
   &:before {
-    content: $ds-icon-iron;     
-    color: #008bd1;
+    content: $ds-icon-iron;
+    color: $color__brand;
   }
 }
 
